--- a/Camera2/app/src/main/res/values/strings.xml
+++ b/Camera2/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="switch_camera">SWITCH</string>
     <string name="record_video">VIDEO</string>
     <string name="stop_video">STOP</string>
+    <string name="title_activity_home">HomeActivity</string>
 </resources>
